--- a/src/frontend/ui.portal.jenn/Views/Shared/CentralAjuda.cshtml
+++ b/src/frontend/ui.portal.jenn/Views/Shared/CentralAjuda.cshtml
@@ -143,9 +143,11 @@
                             </div>
                         </div>
                     </div>
+                </div>   
+                <div class="col-xl-3 offset-xl-1">
+                     @await Component.InvokeAsync("Contato")
                 </div>
-                @await Component.InvokeAsync("Contato")
-        </section>
+</section>
     </main>
 
     <footer class="footer">
