--- a/src/frontend/ui.portal.jenn/Views/Shared/CentralAjuda.cshtml
+++ b/src/frontend/ui.portal.jenn/Views/Shared/CentralAjuda.cshtml
@@ -30,8 +30,8 @@
         <div class="row">
             <div class="col-xl-3 col-lg-4 col-md-5 col-6">
                 <div class="header__background">
-                    <a href="index.html" title="Jenn"></a>
-                    <img class="header__background--logo" src="/img/logo-jenn.png" alt="Logotipo Jenn" />
+                    <a href="@Url.Action("Inicio", "Home")" title="Jenn">
+                        <img class="header__background--logo" src="/img/logo-jenn.png" alt="Logotipo Jenn" />
                     </a>
                 </div>
             </div>
@@ -145,7 +145,9 @@
                     </div>
                 </div>   
                 <div class="col-xl-3 offset-xl-1">
-                     @await Component.InvokeAsync("Contato")
+                    <h2>Entre em contato</h2>
+
+                    @await Component.InvokeAsync("Contato")
                 </div>
 </section>
     </main>
