--- a/src/frontend/ui.portal.jenn/Views/Shared/Components/FooterParte2/Default.cshtml
+++ b/src/frontend/ui.portal.jenn/Views/Shared/Components/FooterParte2/Default.cshtml
@@ -1,19 +1,19 @@
 ﻿<div class="row">
     <div class="col-xl-3 col-lg-3 col-md-6">
         <h5>Serviço</h5>
-        <a href="~/statico/seguranca-da-informacao.html" title="Segurança da informação">Segurança da informação</a>
-        <a href="~/statico/quem-somos.html" title="Quem somos">Quem somos</a>
+        <a href="@Url.Action("SegurancaInformacao", "Home")" title="Segurança da informação">Segurança da informação</a>
+        <a href="@Url.Action("QuemSomos", "Home")" title="Quem somos">Quem somos</a>
         <a href="@Url.Action("Contato", "Home")" title="Contato">Contato</a>
     </div>
     <div class="col-xl-3 col-lg-3 col-md-6">
         <h5>Pacientes</h5>
         <a href="@Url.Action("CentralAjuda", "Home")" title="Perguntas frequentes">Perguntas frequentes</a>
-        <a href="~/statico/termos-e-condicoes.html" title="Termos e condições">Termos e condições</a>
+        <a href="@Url.Action("TermosCondicoes", "Home")" title="Termos e condições">Termos e condições</a>
     </div>
     <div class="col-xl-3 col-lg-3 col-md-6">
         <h5>Instituições de saúde</h5>
         <a href="@Url.Action("Contato", "Home")" title="Entre em contato">Entre em contato</a>
-        <a href="~/statico/termos-e-condicoes.html" title="Termos e condições">Termos e condições</a>
+        <a href="@Url.Action("TermosCondicoes", "Home")" title="Termos e condições">Termos e condições</a>
     </div>
     <div class="col-xl-3 col-lg-3 col-md-6">
         <img class="logo-footer" src="img/logo-reduz-jenn.png" alt="" />
