--- a/src/frontend/ui.portal.jenn/Views/Shared/Components/ListaTipoProcedimento/Default.cshtml
+++ b/src/frontend/ui.portal.jenn/Views/Shared/Components/ListaTipoProcedimento/Default.cshtml
@@ -3,7 +3,7 @@
 <div class="col-xl-12 col-lg-12 col-md-12">
     <div class="links">
 
-        @if (Model.Any())
+        @if (Model != null && Model.Any())
         {
             @foreach (var item in Model)
             {
