--- a/src/frontend/ui.portal.jenn/Views/Home/MeuPainel.cshtml
+++ b/src/frontend/ui.portal.jenn/Views/Home/MeuPainel.cshtml
@@ -31,8 +31,8 @@
         <div class="row">
             <div class="col-xl-3 col-lg-4 col-md-5 col-6">
                 <div class="header__background">
-                    <a href="index.html" title="Jenn"></a>
-                    <img class="header__background--logo" src="/img/logo-jenn.png" alt="Logotipo Jenn" />
+                    <a href="@Url.Action("Inicio", "Home")" title="Jenn">
+                        <img class="header__background--logo" src="/img/logo-jenn.png" alt="Logotipo Jenn" />
                     </a>
                 </div>
             </div>
