--- a/src/frontend/ui.portal.jenn/Views/Home/QuemSomos.cshtml
+++ b/src/frontend/ui.portal.jenn/Views/Home/QuemSomos.cshtml
@@ -16,7 +16,6 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/icon-font.css">
-    <link rel="stylesheet" href="https://unpkg.com/multiple-select@1.5.2/dist/multiple-select.min.css">
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css" />
     <link rel="stylesheet" href="/css/main.css">
     <link rel="shortcut icon" type="image/png" href="/img/favicon.png">
@@ -24,9 +23,8 @@
     <title>Jenn</title>
 </head>
 
-<body class="page page-contato ">
-    <div class="splash-left"></div>
-    <div class="splash-right"></div>
+<body class="page page-quemsomos">
+
     <header class="header">
         <div class="row">
             <div class="col-xl-3 col-lg-4 col-md-5 col-6">
@@ -39,32 +37,35 @@
             <div class="col-xl-9 col-lg-7 col-md-7 col-6">
                 <div clSass="header__top">
                     <div class="page-name">
-                        <h1>Entre em Contato</h1>
+                        <h1>Quem somos</h1>
                     </div>
                     <div class="menu-header">
                         @await Component.InvokeAsync("TopoControleLink")
                     </div>
 
                 </div>
+
             </div>
-            </div>
-        </header>
+        </div>
+
+
+    </header>
+
+
     <main class="main">
-        <section class="contato page-interna">
-            <div class="row">
-                <div class="col-xl-12">
-                    <div class="content-page">
-                            @await Component.InvokeAsync("Contato")
-                    </div>
-                </div>
+        <section class="quemsomos">
+            <div class="content-page">
+                <p>Lorem ipsum sapien euismod ultricies pretium molestie commodo suspendisse nulla dui aenean conubia accumsan aenean porta, fermentum donec sapien purus arcu est quis lectus consectetur dapibus orci scelerisque cras diam. etiam a dictum metus cras et fusce lacinia lorem, ut libero massa senectus praesent id libero, dictumst consequat nec senectus ultrices augue turpis. risus blandit fames mollis scelerisque semper tellus enim suscipit malesuada, est ultrices lacus vestibulum ipsum fermentum convallis augue euismod felis, inceptos id inceptos quam ut curabitur turpis rutrum. venenatis tempor ligula cursus euismod tempor hendrerit placerat hendrerit vitae fames, platea cras volutpat auctor donec lectus elementum ante eros nec, quisque praesent non ultrices aptent porttitor eget sapien ornare.</p>
             </div>
         </section>
     </main>
+
 
     <footer class="footer">
         <div class="row">
             <div class="col-xl-6 col-lg-12 col-md-12">
                 @await Component.InvokeAsync("FooterParte1")
+
             </div>
             <div class="col-xl-5 offset-xl-1  right-side col-lg-12 col-md-12">
                 @await Component.InvokeAsync("FooterParte2")
@@ -72,15 +73,12 @@
         </div>
     </footer>
 
-    <script src="https://code.jquery.com/jquery-3.2.1.js"
-            integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+            integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
             crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
-
-    <script src="https://unpkg.com/multiple-select@1.5.2/dist/multiple-select.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-
     <script type="text/javascript" src="/js/script.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 </body>
 </html>
