--- a/src/frontend/ui.portal.jenn/Views/Home/MeuPainel.cshtml
+++ b/src/frontend/ui.portal.jenn/Views/Home/MeuPainel.cshtml
@@ -29,22 +29,19 @@
     <div class="splash-right"></div>
     <header class="header">
         <div class="row">
-            <div class="col-xl-3 col-lg-4 col-md-5 col-6">
-                <div class="header__background">
-                    <a href="@Url.Action("Inicio", "Home")" title="Jenn">
-                        <img class="header__background--logo" src="/img/logo-jenn.png" alt="Logotipo Jenn" />
-                    </a>
-                </div>
+            <div class="col-xl-6 col-lg-4 col-md-5 col-6">
+                <h1>
+                    <div class="header__background">
+                        <a href="@Url.Action("Inicio", "Home")" title="Jenn">
+                            <img class="header__background--logo" src="/img/logo-jenn.png" alt="Logotipo Jenn" />
+                        </a>
+                    </div>
+                </h1>
             </div>
-            <div class="col-xl-9 col-lg-7 col-md-7 col-6">
-                <div clSass="header__top">
-                    @await Component.InvokeAsync("TopoControleLink")
-
-                </div>
+            <div class="col-xl-5 offset-xl-1 col-lg-7 col-md-7 col-6">
+                @await Component.InvokeAsync("TopoControleLink")
             </div>
         </div>
-
-
     </header>
 
     <main class="main">
@@ -143,7 +140,7 @@
                         </div>
                     </div>
                 </div>
-
+            </div>
         </section>
     </main>
 
