--- a/src/frontend/ui.portal.jenn/Views/Shared/Components/ProcedimentoLista/Default.cshtml
+++ b/src/frontend/ui.portal.jenn/Views/Shared/Components/ProcedimentoLista/Default.cshtml
@@ -35,7 +35,7 @@
                 </div>
             </div>
             <div class="btn-content">
-                <a href="@Model.EnderecoLoja" class="btn btn-primary" title="">Ver preço</a>
+                <a href="@Model.EnderecoLoja" class="btn btn-primary" title="">PARTICULAR</a>
                 <a href="" class="btn btn-primary btn-convenio" title="">CONVÊNIOS</a>
                 <div class="box-convenios">
                     <form>
